<resources>
    <string name="app_name">Oh My Grill</string>
    <string name="nav_menu">Menu</string>
    <string name="nav_sales">Orders</string>
    <string name="add_item">Add Item</string>
    <string name="item_name_edit">Item Name</string>
    <string name="item_photo">Item Photo</string>
    <string name="add_photo">Add Photo</string>
    <string name="raw_price_edit">Raw Price</string>
    <string name="sale_price_edit">Sale Price</string>
    <string name="quantity_edit">Quantity</string>
    <string name="sale_channel">Sales Channel</string>
    <string name="back_button">Back</string>
    <string name="save_button">Save</string>
    <string name="proceed_button">Proceed</string>
    <string name="start_date">Start Date:</string>
    <string name="select_date">Select Date</string>
    <string name="end_date">End Date:</string>
    <string name="sale_details">Sale Details</string>
    <string name="amount">Amount</string>
    <string name="sale_id">Order ID:</string>
    <string name="sales_channel">Sales Channel:</string>
    <string name="quantity">Quantity:</string>
    <string name="raw_price">Raw Price:</string>
    <string name="sale_price">Sale Price:</string>
    <string name="profit">Profit: THB %.0f</string>
    <string name="timestamp">Date:</string>
    <string name="export">Export</string>
    <string name="item_name">Item:</string>
    <string name="expense_amount">Expense Amount</string>
    <string name="submit">Submit</string>
    <string name="total_expense">Expense: THB %.0f</string>
    <string name="total_sales">Sales: THB %.0f</string>
    <string name="splash_logo">Splash Logo</string>
    <string name="total">Total:</string>
    <string name="channel_list_name">Channel Name</string>
    <string name="discount">Discount</string>
    <string name="delete_channel">Delete</string>
    <string name="sales_channels_list">Sales Channels List</string>
    <string name="edit_sales_channel_name">Name</string>
    <string name="edit_sales_channel_discount">Discount</string>
    <string name="cancel_sale">Cancel Order</string>
    <string name="increase_quantity">Increase quantity</string>
    <string name="decrease_quantity">Decrease quantity</string>
</resources>