<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content">

        <!-- Sale ID -->
        <TextView
            android:id="@+id/text_view_sale_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sale_id"
            android:textStyle="bold"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/text_view_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_name" />

        <!-- Sales Channel -->
        <TextView
            android:id="@+id/text_view_sales_channel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sales_channel" />

        <!-- Quantity -->
        <TextView
            android:id="@+id/text_view_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity" />

        <!-- Raw Price -->
        <TextView
            android:id="@+id/text_view_raw_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/raw_price"
            android:visibility="gone"/>

        <!-- Sale Price -->
        <TextView
            android:id="@+id/text_view_sale_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sale_price" />

        <!-- Profit -->
        <TextView
            android:id="@+id/text_view_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total" />

        <!-- Timestamp -->
        <TextView
            android:id="@+id/text_view_sale_timestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timestamp" />
    </LinearLayout>

    <!-- Right side: Cancel Button -->
    <ImageButton
        android:id="@+id/button_cancel_sale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_cancel"
        android:contentDescription="@string/cancel_sale"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_gravity="center_vertical"/>
</LinearLayout>
