<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:padding="16dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_item_photo"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/item_photo"
            android:src="@drawable/ic_placeholder"
            android:scaleType="centerCrop" />

        <!-- Buttons Layout in the same line -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <!-- Add Photo Button -->
            <Button
                android:id="@+id/button_add_photo"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/add_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:padding="12dp"
                android:layout_marginEnd="16dp" />

            <!-- Save Button -->
            <Button
                android:id="@+id/button_save"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:padding="12dp"
                android:layout_weight="1" />

        </LinearLayout>

        <EditText
            android:id="@+id/edit_text_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/item_name_edit"
            android:inputType="text"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/edit_text_raw_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/raw_price_edit"
            android:inputType="numberDecimal"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/edit_text_sale_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/sale_price_edit"
            android:inputType="numberDecimal"
            android:minHeight="48dp" />

        <Spinner
            android:id="@+id/sales_channel_dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:prompt="@string/sale_channel" />

        <EditText
            android:id="@+id/edit_text_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/quantity_edit"
            android:inputType="text"
            android:minHeight="48dp" />

        <!-- Proceed Button (Main Button) -->
        <Button
            android:id="@+id/button_proceed"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/proceed_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_red_light"
            android:textColor="@android:color/white"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center"
            android:padding="12dp"
            android:background="@drawable/button_border" />

    </LinearLayout>
</ScrollView>
