<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp">

    <!-- Channel Name EditText -->
    <EditText
        android:id="@+id/edit_channel_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:autofillHints=""
        android:hint="@string/edit_sales_channel_name"
        android:inputType="text" />

    <!-- Discount EditText -->
    <EditText
        android:id="@+id/edit_discount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:autofillHints=""
        android:hint="@string/edit_sales_channel_discount"
        android:inputType="number" />

    <!-- Delete Button -->
    <ImageButton
        android:id="@+id/button_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/delete_channel"
        android:src="@drawable/ic_delete"
        android:background="?attr/selectableItemBackgroundBorderless" />

</LinearLayout>
